--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,9 +7,9 @@ package:
 source:
   - url: https://github.com/llvm/llvm-project/releases/download/llvmorg-{{ version.replace(".rc", "-rc") }}/llvm-project-{{ version.replace(".rc", "rc") }}.src.tar.xz
     sha256: 9a56d906a2c81f16f06efc493a646d497c53c2f4f28f0cb1f3c8da7f74350254
-#    patches:
-#      # https://reviews.llvm.org/D99470
-#      - 0001-Support-cross-compiling-standalone-MLIR.patch
+    patches:
+      # https://reviews.llvm.org/D99470
+      - 0001-Support-cross-compiling-standalone-MLIR.patch
 
 build:
   number: 0
