--- a/.ci_support/linux_64_numpy1.22python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_numpy1.22python3.8.____cpython.yaml
@@ -1,3 +1,7 @@
+c_stdlib:
+- sysroot
+c_stdlib_version:
+- '2.12'
 cdt_name:
 - cos6
 channel_sources:
@@ -21,8 +25,9 @@ python:
 target_platform:
 - linux-64
 zip_keys:
+- - c_stdlib_version
+  - cdt_name
 - - python
   - numpy
-  - channel_sources
 zlib:
 - '1.2'
