--- a/.ci_support/win_64_numpy1.23python3.11.____cpython.yaml
+++ b/.ci_support/win_64_numpy1.23python3.11.____cpython.yaml
@@ -1,3 +1,5 @@
+c_stdlib:
+- vs
 channel_sources:
 - conda-forge
 channel_targets:
@@ -17,6 +19,5 @@ target_platform:
 zip_keys:
 - - python
   - numpy
-  - channel_sources
 zlib:
 - '1.2'
