--- a/.ci_support/win_64_numpy1.26python3.12.____cpython.yaml
+++ b/.ci_support/win_64_numpy1.26python3.12.____cpython.yaml
@@ -1,5 +1,7 @@
+c_stdlib:
+- vs
 channel_sources:
-- conda-forge/label/python_rc,conda-forge
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -17,6 +19,5 @@ target_platform:
 zip_keys:
 - - python
   - numpy
-  - channel_sources
 zlib:
 - '1.2'
