--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -2,3 +2,6 @@ c_compiler:         # [osx and arm64]
   - clang_bootstrap # [osx and arm64]
 cxx_compiler:       # [osx and arm64]
   - clang_bootstrap # [osx and arm64]
+# needs newer macos from LLVM 17
+c_stdlib_version:   # [osx and x86_64]
+  - "10.13"         # [osx and x86_64]
