--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - cmake
     - ninja
     - {{ compiler('cxx') }}
+    - {{ stdlib('c') }}
     - llvmdev {{ version }}  # [build_platform != target_platform]
     - python                 # [build_platform != target_platform]
     - numpy                  # [build_platform != target_platform]
