--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -8,24 +8,64 @@ jobs:
     vmImage: ubuntu-latest
   strategy:
     matrix:
-      linux_64_numpy1.22python3.8.____cpython:
-        CONFIG: linux_64_numpy1.22python3.8.____cpython
+      linux_64_build_platformlinux_aarch64numpy1.22python3.8.____cpython:
+        CONFIG: linux_64_build_platformlinux_aarch64numpy1.22python3.8.____cpython
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-      linux_64_numpy2.0python3.10.____cpython:
-        CONFIG: linux_64_numpy2.0python3.10.____cpython
+      linux_64_build_platformlinux_aarch64numpy2.0python3.10.____cpython:
+        CONFIG: linux_64_build_platformlinux_aarch64numpy2.0python3.10.____cpython
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-      linux_64_numpy2.0python3.11.____cpython:
-        CONFIG: linux_64_numpy2.0python3.11.____cpython
+      linux_64_build_platformlinux_aarch64numpy2.0python3.11.____cpython:
+        CONFIG: linux_64_build_platformlinux_aarch64numpy2.0python3.11.____cpython
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-      linux_64_numpy2.0python3.12.____cpython:
-        CONFIG: linux_64_numpy2.0python3.12.____cpython
+      linux_64_build_platformlinux_aarch64numpy2.0python3.12.____cpython:
+        CONFIG: linux_64_build_platformlinux_aarch64numpy2.0python3.12.____cpython
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-      linux_64_numpy2.0python3.9.____cpython:
-        CONFIG: linux_64_numpy2.0python3.9.____cpython
+      linux_64_build_platformlinux_aarch64numpy2.0python3.9.____cpython:
+        CONFIG: linux_64_build_platformlinux_aarch64numpy2.0python3.9.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformlinux_ppc64lenumpy1.22python3.8.____cpython:
+        CONFIG: linux_64_build_platformlinux_ppc64lenumpy1.22python3.8.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformlinux_ppc64lenumpy2.0python3.10.____cpython:
+        CONFIG: linux_64_build_platformlinux_ppc64lenumpy2.0python3.10.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformlinux_ppc64lenumpy2.0python3.11.____cpython:
+        CONFIG: linux_64_build_platformlinux_ppc64lenumpy2.0python3.11.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformlinux_ppc64lenumpy2.0python3.12.____cpython:
+        CONFIG: linux_64_build_platformlinux_ppc64lenumpy2.0python3.12.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformlinux_ppc64lenumpy2.0python3.9.____cpython:
+        CONFIG: linux_64_build_platformlinux_ppc64lenumpy2.0python3.9.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformosx_arm64numpy1.22python3.8.____cpython:
+        CONFIG: linux_64_build_platformosx_arm64numpy1.22python3.8.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformosx_arm64numpy2.0python3.10.____cpython:
+        CONFIG: linux_64_build_platformosx_arm64numpy2.0python3.10.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformosx_arm64numpy2.0python3.11.____cpython:
+        CONFIG: linux_64_build_platformosx_arm64numpy2.0python3.11.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformosx_arm64numpy2.0python3.12.____cpython:
+        CONFIG: linux_64_build_platformosx_arm64numpy2.0python3.12.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_build_platformosx_arm64numpy2.0python3.9.____cpython:
+        CONFIG: linux_64_build_platformosx_arm64numpy2.0python3.9.____cpython
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
   timeoutInMinutes: 360
