--- a/.ci_support/linux_64_build_platformlinux_ppc64lenumpy2.0python3.12.____cpython.yaml
+++ b/.ci_support/linux_64_build_platformlinux_ppc64lenumpy2.0python3.12.____cpython.yaml
@@ -1,9 +1,11 @@
+build_platform:
+- linux_ppc64le
 c_stdlib:
 - sysroot
 c_stdlib_version:
-- '2.12'
+- '2.17'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
@@ -21,7 +23,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.11.* *_cpython
+- 3.12.* *_cpython
 target_platform:
 - linux-64
 zip_keys:
