--- a/.ci_support/linux_64_build_platformlinux_ppc64lenumpy2.0python3.9.____cpython.yaml
+++ b/.ci_support/linux_64_build_platformlinux_ppc64lenumpy2.0python3.9.____cpython.yaml
@@ -1,9 +1,11 @@
+build_platform:
+- linux_ppc64le
 c_stdlib:
 - sysroot
 c_stdlib_version:
-- '2.12'
+- '2.17'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
@@ -15,13 +17,13 @@ cxx_compiler_version:
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 numpy:
-- '1.22'
+- '2.0'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.8.* *_cpython
+- 3.9.* *_cpython
 target_platform:
 - linux-64
 zip_keys:
