--- a/.ci_support/osx_64_build_platformosx_arm64numpy2.0python3.12.____cpython.yaml
+++ b/.ci_support/osx_64_build_platformosx_arm64numpy2.0python3.12.____cpython.yaml
@@ -2,6 +2,8 @@ MACOSX_DEPLOYMENT_TARGET:
 - '10.13'
 MACOSX_SDK_VERSION:
 - '10.13'
+build_platform:
+- osx_arm64
 c_stdlib:
 - macosx_deployment_target
 c_stdlib_version:
@@ -23,7 +25,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.11.* *_cpython
+- 3.12.* *_cpython
 target_platform:
 - osx-64
 zip_keys:
