--- a/.ci_support/win_64_build_platformlinux_ppc64lenumpy2.0python3.12.____cpython.yaml
+++ b/.ci_support/win_64_build_platformlinux_ppc64lenumpy2.0python3.12.____cpython.yaml
@@ -1,3 +1,5 @@
+build_platform:
+- linux_ppc64le
 c_stdlib:
 - vs
 channel_sources:
@@ -13,7 +15,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.10.* *_cpython
+- 3.12.* *_cpython
 target_platform:
 - win-64
 zip_keys:
