--- a/.ci_support/win_64_build_platformosx_arm64numpy1.22python3.8.____cpython.yaml
+++ b/.ci_support/win_64_build_platformosx_arm64numpy1.22python3.8.____cpython.yaml
@@ -1,3 +1,5 @@
+build_platform:
+- osx_arm64
 c_stdlib:
 - vs
 channel_sources:
@@ -7,13 +9,13 @@ channel_targets:
 cxx_compiler:
 - vs2019
 numpy:
-- '2.0'
+- '1.22'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.12.* *_cpython
+- 3.8.* *_cpython
 target_platform:
 - win-64
 zip_keys:
