--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 1
   # debug
-  skip: true  # [not (aarch64 or ppc64le or (osx and arm64))]
+  skip: true  # [not (aarch64 or ppc64le or osx)]
   always_include_files:
     # Must overwrite cmake metadata from mlir
     - lib/cmake/mlir/          # [unix]
