--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,8 @@ requirements:
     - python                 # [build_platform != target_platform]
     - numpy                  # [build_platform != target_platform]
     - pybind11 >=2.8.0       # [build_platform != target_platform]
-    # native mlir-tblgen wants to find these for linking
+    # for native mlir-tblgen
+    - mlir                   # [build_platform != target_platform]
     - zlib                   # [build_platform != target_platform]
     - zstd                   # [build_platform != target_platform]
   host:
