--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -5,3 +5,7 @@ cxx_compiler:       # [osx and arm64]
 # needs newer macos from LLVM 17
 c_stdlib_version:   # [osx and x86_64]
   - "10.13"         # [osx and x86_64]
+channel_sources:
+  - conda-forge/label/llvm_rc,conda-forge
+channel_targets:
+  - conda-forge llvm_rc
