--- a/.ci_support/osx_64_python3.10.____cpython.yaml
+++ b/.ci_support/osx_64_python3.10.____cpython.yaml
@@ -1,23 +1,21 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
+MACOSX_DEPLOYMENT_TARGET:
+- '10.13'
+MACOSX_SDK_VERSION:
+- '10.13'
 c_stdlib:
-- sysroot
+- macosx_deployment_target
 c_stdlib_version:
-- '2.17'
-cdt_arch:
-- aarch64
-cdt_name:
-- cos7
+- '10.13'
 channel_sources:
-- conda-forge
+- conda-forge/label/llvm_rc,conda-forge
 channel_targets:
-- conda-forge mlir_rc
+- conda-forge llvm_rc
 cxx_compiler:
-- gxx
+- clang_bootstrap
 cxx_compiler_version:
-- '12'
-docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- '17'
+macos_machine:
+- x86_64-apple-darwin13.4.0
 numpy:
 - '2.0'
 pin_run_as_build:
@@ -27,10 +25,8 @@ pin_run_as_build:
 python:
 - 3.10.* *_cpython
 target_platform:
-- linux-aarch64
+- osx-64
 zip_keys:
-- - c_stdlib_version
-  - cdt_name
 - - python
   - numpy
 zlib:
