--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - python                 # [build_platform != target_platform]
     - numpy                  # [build_platform != target_platform]
+    - nanobind >=2.4.0       # [build_platform != target_platform]
     - pybind11 >=2.8.0       # [build_platform != target_platform]
     # for native mlir-tblgen
     - mlir                   # [build_platform != target_platform]
@@ -40,6 +41,7 @@ requirements:
     - zlib
     - python
     - numpy
+    - nanobind >=2.4.0
     - pybind11 >=2.8.0
   run:
     - python
