--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,6 +2,11 @@ azure:
   free_disk_space: true
   settings_linux:
     swapfile_size: 15GiB
+  settings_win:
+    variables:
+      CONDA_BLD_PATH: C:\\bld\\
+      MINIFORGE_HOME: C:\Miniforge
+      SET_PAGEFILE: "True"
 bot:
   version_updates:
     sources:
