add libcxx dependency that's missing due to clang_bootstrap
see also https://github.com/conda-forge/mlir-feedstock/commit/242609e2176a22d9ae8217685bd12700920e3898

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,3 +1,4 @@
+# we want to match compilers with mlir (since we're recompiling portions of that)
 c_compiler:         # [osx]
   - clang_bootstrap # [osx]
 cxx_compiler:       # [osx]
