add some host dependencies for missing run-exports

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,9 @@ requirements:
     - llvmdev {{ version }}
     - llvm {{ version }}
     - mlir  {{ version }}
+    - libmlir
     - zlib
+    - zstd      # [win]
     - python
     - numpy
     - nanobind >=2.4.0
